--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript">
         /* Specify the URL of the source that the home application loads. */
         appUnitFQDN = "demo.personium.io";
+        appUseBox = "__";
         $.ajax({
             type: "GET",
             url: "https://" + appUnitFQDN + "/",
@@ -66,14 +67,14 @@
         function loadStyleSheet() {
             let head = document.getElementsByTagName('head')[0];
             let styleList = [
-                homeAppUrl + "__/html/css/cropper/cropper.min.css",
-                homeAppUrl + "__/html/css/cropper/cropper_circle_mask.css",
-                homeAppUrl + "__/html/css/bootstrap-switch/bootstrap-switch.min.css",
-                homeAppUrl + "__/html/css/common.css",
-                homeAppUrl + "__/html/css/login.css",
-                homeAppUrl + "__/html/css/personium.css",
-                homeAppUrl + "__/html/css/homeapp.css",
-                homeAppUrl + "__/html/css/application_mgr.css"
+                homeAppUrl + appUseBox + "/html/css/cropper/cropper.min.css",
+                homeAppUrl + appUseBox + "/html/css/cropper/cropper_circle_mask.css",
+                homeAppUrl + appUseBox + "/html/css/bootstrap-switch/bootstrap-switch.min.css",
+                homeAppUrl + appUseBox + "/html/css/common.css",
+                homeAppUrl + appUseBox + "/html/css/login.css",
+                homeAppUrl + appUseBox + "/html/css/personium.css",
+                homeAppUrl + appUseBox + "/html/css/homeapp.css",
+                homeAppUrl + appUseBox + "/html/css/application_mgr.css"
             ];
 
             for (var i = 0; i < styleList.length; i++) {
@@ -87,39 +88,39 @@
         function loadScript(callback) {
             let head = document.getElementsByTagName('head')[0];
             let scriptList = [
-                homeAppUrl + "__/html/js/bootstrap-switch/bootstrap-switch.min.js",
-                homeAppUrl + "__/html/js/personium.js",
-                homeAppUrl + "__/html/js/common.js",
-                homeAppUrl + "__/html/js/login.js",
-                homeAppUrl + "__/html/js/main.js",
-                homeAppUrl + "__/html/js/load.i18n.js",
-                homeAppUrl + "__/html/js/utils.js",
-                homeAppUrl + "__/html/js/account.js",
-                homeAppUrl + "__/html/js/account_info.js",
-                homeAppUrl + "__/html/js/account_link_role_list.js",
-                homeAppUrl + "__/html/js/account_link_role.js",
-                homeAppUrl + "__/html/js/edit_account.js",
-                homeAppUrl + "__/html/js/select_accounttype.js",
-                homeAppUrl + "__/html/js/new_account.js",
-                homeAppUrl + "__/html/js/settings.js",
-                homeAppUrl + "__/html/js/profile.js",
-                homeAppUrl + "__/html/js/change_password.js",
-                homeAppUrl + "__/html/js/change_language.js",
-                homeAppUrl + "__/html/js/app_manage.js",
-                homeAppUrl + "__/html/js/applicationmarket.js",
-                homeAppUrl + "__/html/js/message.js",
-                homeAppUrl + "__/html/js/inc_msg_list.js",
-                homeAppUrl + "__/html/js/msg_info.js",
-                homeAppUrl + "__/html/js/create_msg.js",
-                homeAppUrl + "__/html/js/search_cell.js",
-                homeAppUrl + "__/html/js/outg_msg_list.js",
-                homeAppUrl + "__/html/js/links.js",
-                homeAppUrl + "__/html/js/new_links.js",
-                homeAppUrl + "__/html/js/links_02.js",
-                homeAppUrl + "__/html/js/arrow_to_role.js",
-                homeAppUrl + "__/html/js/extcell_link_role_list.js",
-                homeAppUrl + "__/html/js/extcell_link_role.js",
-                homeAppUrl + "__/html/js/arrow_from_role.js"
+                homeAppUrl + appUseBox + "/html/js/bootstrap-switch/bootstrap-switch.min.js",
+                homeAppUrl + appUseBox + "/html/js/personium.js",
+                homeAppUrl + appUseBox + "/html/js/common.js",
+                homeAppUrl + appUseBox + "/html/js/login.js",
+                homeAppUrl + appUseBox + "/html/js/main.js",
+                homeAppUrl + appUseBox + "/html/js/load.i18n.js",
+                homeAppUrl + appUseBox + "/html/js/utils.js",
+                homeAppUrl + appUseBox + "/html/js/account.js",
+                homeAppUrl + appUseBox + "/html/js/account_info.js",
+                homeAppUrl + appUseBox + "/html/js/account_link_role_list.js",
+                homeAppUrl + appUseBox + "/html/js/account_link_role.js",
+                homeAppUrl + appUseBox + "/html/js/edit_account.js",
+                homeAppUrl + appUseBox + "/html/js/select_accounttype.js",
+                homeAppUrl + appUseBox + "/html/js/new_account.js",
+                homeAppUrl + appUseBox + "/html/js/settings.js",
+                homeAppUrl + appUseBox + "/html/js/profile.js",
+                homeAppUrl + appUseBox + "/html/js/change_password.js",
+                homeAppUrl + appUseBox + "/html/js/change_language.js",
+                homeAppUrl + appUseBox + "/html/js/app_manage.js",
+                homeAppUrl + appUseBox + "/html/js/applicationmarket.js",
+                homeAppUrl + appUseBox + "/html/js/message.js",
+                homeAppUrl + appUseBox + "/html/js/inc_msg_list.js",
+                homeAppUrl + appUseBox + "/html/js/msg_info.js",
+                homeAppUrl + appUseBox + "/html/js/create_msg.js",
+                homeAppUrl + appUseBox + "/html/js/search_cell.js",
+                homeAppUrl + appUseBox + "/html/js/outg_msg_list.js",
+                homeAppUrl + appUseBox + "/html/js/links.js",
+                homeAppUrl + appUseBox + "/html/js/new_links.js",
+                homeAppUrl + appUseBox + "/html/js/links_02.js",
+                homeAppUrl + appUseBox + "/html/js/arrow_to_role.js",
+                homeAppUrl + appUseBox + "/html/js/extcell_link_role_list.js",
+                homeAppUrl + appUseBox + "/html/js/extcell_link_role.js",
+                homeAppUrl + appUseBox + "/html/js/arrow_from_role.js"
             ];
 
             let i = 0;
