--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript">
         /* Specify the URL of the source that the home application loads. */
         var appUnitFQDN = "demo.personium.io";
+        var appMarketListEndpoint = "https://demo.personium.io/market/__/applist/Apps";
         var homeAppUrl;
         var appUseBox = "__";
         $.ajax({
