CHORES: Modify sources to support both URL format
Closes #22

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <script type="text/javascript">
         /* Specify the URL of the source that the home application loads. */
         var appUnitFQDN = "demo.personium.io";
-        var appMarketListEndpoint = "https://demo.personium.io/market/__/applist/Apps";
+        var appMarketListEndpoint = "https://market.demo.personium.io/__/applist/Apps";
+        var appDirectoryEndpoint = "https://directory.demo.personium.io/app-uc-directory/OData/directory";
         var homeAppUrl;
         var appUseBox = "__";
         $.ajax({
