--- a/html/login.html
+++ b/html/login.html
@@ -25,7 +25,7 @@
         </div>
         <div>
           <button class="login_btn_g" id="gLogin">
-            <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/app-cc-home/__/html/img/parts_ico_google.png">
+            <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" />
             <span class="fontWhite" data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
           </button>
         </div>
@@ -33,7 +33,7 @@
       <div class="error_box">
         <div id="error_area" class="error_area">
           <div class="error_content">
-            <img id="imError" class="image-error" src="https://demo.personium.io/app-cc-home/__/html/img/ico_error.png"/>
+            <img id="imError" class="image-error" />
             <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
           </div>
         </div>
