It corresponded to the display of the error message passed from the server

--- a/authform/authform_new.html
+++ b/authform/authform_new.html
@@ -67,6 +67,11 @@
                             <input type="checkbox" name="keeplogin" id="keeplogin" style="margin-bottom: 16px;" checked/>keeplogin
                         </div>
                         <div>
+                            <font style="color:red;">
+                                <span id="errorDescription" style="display:none;"></span>
+                            </font>
+                        </div>
+                        <div>
                             <input type="text" name="username" id="username" data-i18n="[placeholder]accountNamePlaceHolder" placeholder="Please enter the account name."/>
                         </div>
                         <div>
