--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             homeAppUrl = "https://" + appUnitFQDN + "/app-cc-home/";
         }).always(function () {
             loadStyleSheet();
+            $('body > div.mySpinner').show();
             loadScript();
         });
 
@@ -149,7 +150,7 @@
     </script>
 </head>
 <body>
-    <div class="mySpinner">
+    <div class="mySpinner" style="display: none;">
         <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
         <span class="sr-only">Loading...</span>
     </div>
