FEATURE: Initialize and update display name properly
1. Set proper message in placeholder
2. Initialize and update value attribute

Closes #236

--- a/html/profile.html
+++ b/html/profile.html
@@ -39,7 +39,7 @@
                         <span data-i18n="DisplayName"></span>：
                     </div>
                     <div class="input-group mb-2">
-                        <input type="text" id="user-name-form" class="form-control" disabled placeholder="" aria-label="" aria-describedby="basic-addon2">
+                        <input type="text" id="user-name-form" class="form-control" disabled data-previous-value="" value="" aria-label="" aria-describedby="basic-addon2">
                     </div>
                 </div>
             </div>
