FEATURES: Password change screen renewal
Closes #242

--- a/html/change_password.html
+++ b/html/change_password.html
@@ -14,14 +14,14 @@
     </header>
     <main>
         <div class="bg-gray">
-            <div id="links">
+            <div id="links" class="change_password">
                 <ul>
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border" data-i18n="Password"></span>
+                                <span class="input-group-text form-title form-no-border" data-i18n="NewPassword"></span>
                             </div>
-                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]newPassPlaceHolder" aria-describedby="basic-addon3">
+                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]enterPassword" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
                             <aside id="editChangeMessage"> </aside>
@@ -37,6 +37,9 @@
                         <span class="popupAlertArea" style="color:red">
                             <aside id="editConfirmMessage"> </aside>
                         </span>
+                    </li>
+                    <li class="passwordSpecification">
+                        <aside data-i18n="newPassPlaceHolder"> </aside>
                     </li>
                 </ul>
             </div>
