FEATURES: Add privacy policy page to menu
Download markdown file and convert the contents to HTML using marked.js
(Japanese privacy policy is translated by Google Translate)

Closes #243

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jdenticon@1.8.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/3.1.4/cropper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="text/javascript">
         /* Specify the URL of the source that the home application loads. */
         var appUnitFQDN = "demo.personium.io";
@@ -111,6 +112,7 @@
                 homeAppUrl + appUseBox + "/html/js/profile.js",
                 homeAppUrl + appUseBox + "/html/js/change_password.js",
                 homeAppUrl + appUseBox + "/html/js/change_language.js",
+                homeAppUrl + appUseBox + "/html/js/privacy_policy.js",
                 homeAppUrl + appUseBox + "/html/js/app_manage.js",
                 homeAppUrl + appUseBox + "/html/js/applicationmarket.js",
                 homeAppUrl + appUseBox + "/html/js/message.js",
