CHORES: Updates files

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jdenticon@1.8.0"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/3.1.4/cropper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.0.0/cropper.js" integrity="sha256-Ek6PYj94VAye2kY9mqCAQSr72BVD0a3hdPsJJMCD0fo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="text/javascript">
         /* Specify the URL of the source that the home application loads. */
         var appUnitFQDN = "demo.personium.io";
-        var appMarketListEndpoint = "https://market.demo.personium.io/__/applist/Apps";
+        var appMarketListEndpoint = "https://market.demo.personium.io/OData/applist/Apps";
         var appDirectoryEndpoint = "https://directory.demo.personium.io/app-uc-directory/OData/directory";
         var homeAppUrl;
         var appUseBox = "__";
