CHORES: Update files

--- a/html/login.html
+++ b/html/login.html
@@ -8,7 +8,7 @@
 <body>
   <div id="loginForm">
     <section class="login-section">
-      <h1 id="pdsLogo" class="login-h1">Personium</h1>
+      <h1 id="pdsLogo" class="login-h1 brand-text"></h1>
       <div>
         <img id="imProfile" src="" class="image-circle-large"/>
       </div>
@@ -25,15 +25,14 @@
         </div>
         <div>
           <button class="login_btn_g" id="gLogin">
-            <img id="google"style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/app-cc-home/__/html/img/parts_ico_google.png">
+            <img id="google"style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://app-cc-home.demo.personium.io/__/html/img/parts_ico_google.png">
             <span class="fontWhite" data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
           </button>
-        </div>
       </div>
       <div class="error_box">
         <div id="error_area" class="error_area">
           <div class="error_content">
-            <img id="imError" class="image-error" src="https://demo.personium.io/app-cc-home/__/html/img/ico_error.png"/>
+            <img id="imError" class="image-error" src="https://app-cc-home.demo.personium.io/__/html/img/ico_error.png"/>
             <span id="error_msg" class="error_msg" data-i18n="Error">Error</span>
           </div>
         </div>
