--- a/html/main.html
+++ b/html/main.html
@@ -42,7 +42,7 @@
         <button id="drawer_btn" class="header-btn pn-btn">
             <i class="fas fa-bars fa-2x header-ic-02"></i>
         </button>
-        Personium
+        <span class="brand-text"></span>
     </header>
 
     <main>
