replace with variable

--- a/src/authform/authform_new.html
+++ b/src/authform/authform_new.html
@@ -20,8 +20,8 @@
 <html>
     <head>
         <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="https://app-cc-home.demo.personium.io/__/authform/login.css">
-        <link rel="stylesheet" type="text/css" href="https://app-cc-home.demo.personium.io/__/authform/personium.css">
+        <link rel="stylesheet" type="text/css" href="${HOME_APP_CELL_URL}__/authform/login.css">
+        <link rel="stylesheet" type="text/css" href="${HOME_APP_CELL_URL}__/authform/personium.css">
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
@@ -29,7 +29,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-xhr-backend/1.5.1/i18nextXHRBackend.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-        <script defer src="https://app-cc-home.demo.personium.io/__/authform/sample.js"></script>
+        <script defer src="${HOME_APP_CELL_URL}__/authform/sample.js"></script>
 
         <title>OAuth2 authorization endpoint</title>
     </head>
