--- a/src/authform/authform_new_server_edition.html
+++ b/src/authform/authform_new_server_edition.html
@@ -19,8 +19,8 @@
 <html>
     <head>
         <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="https://app-cc-home.demo.personium.io/__/authform/login.css">
-        <link rel="stylesheet" type="text/css" href="https://app-cc-home.demo.personium.io/__/authform/personium.css">
+        <link rel="stylesheet" type="text/css" href="${HOME_APP_CELL_URL}__/authform/login.css">
+        <link rel="stylesheet" type="text/css" href="${HOME_APP_CELL_URL}__/authform/personium.css">
 
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
