--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personium Cell</title>
-    <link rel="icon" href="${HOME_APP_CELL_URL}__/html/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
@@ -38,36 +38,45 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="text/javascript">
         /* Specify the URL of the source that the home application loads. */
-        // var appCellName = "${CELL_NAME}";
-        // var appUnitFQDN = "${UNIT_FQDN}";
+        var appCellName = "${CELL_NAME}";
+        var appUnitFQDN = "${UNIT_FQDN}";
+        var homeAppUrl = "${HOME_APP_CELL_URL}";
         var appMarketListEndpoint = "${MARKETLIST_ENDPOINT}";
         var appDirectoryEndpoint = "${APPDIRECTORY_ENDPOINT}";
         var appUseBox = "__";
-        // $.ajax({
-        //     type: "GET",
-        //     url: "https://" + appUnitFQDN + "/",
-        //     headers: {
-        //         'Accept': 'application/json'
-        //     }
-        // }).done(function (unitObj, status, xhr) {
-        //     let ver = xhr.getResponseHeader("x-personium-version");
-        //     if (ver < "1.7.1" || unitObj.unit.path_based_cellurl_enabled) {
-        //         homeAppUrl = "https://" + appUnitFQDN + "/" + appCellName + "/";
-        //     } else {
-        //         homeAppUrl = "https://" + appCellName + "." + appUnitFQDN + "/";
-        //     }
-        // }).fail(function (res) {
-        //     homeAppUrl = "https://" + appUnitFQDN + "/" + appCellName + "/";
-        // }).always(function () {
-        //     loadStyleSheet();
-        //     loadScript();
-        // });
-        var homeAppUrl = "${HOME_APP_CELL_URL}";
 
-        setTimeout(function () {
-          loadStyleSheet();
-          loadScript();
-        }, 1);
+        function setupApp() {
+            const link = document.querySelector("link[rel~='icon']");
+            if (!link) {
+                link = document.createElement('link');
+                link.rel = 'icon';
+                document.getElementsByTagName("head")[0].appendChild(link);
+            }
+            link.href = homeAppUrl + "__/html/img/favicon.ico";
+            loadStyleSheet();
+            loadScript();
+        }
+
+        if (!!homeAppUrl) {
+            setTimeout(setupApp, 0);
+        } else {
+            $.ajax({
+                type: "GET",
+                url: "https://" + appUnitFQDN + "/",
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).done(function (unitObj, status, xhr) {
+                let ver = xhr.getResponseHeader("x-personium-version");
+                if (ver < "1.7.1" || unitObj.unit.path_based_cellurl_enabled) {
+                    homeAppUrl = "https://" + appUnitFQDN + "/" + appCellName + "/";
+                } else {
+                    homeAppUrl = "https://" + appCellName + "." + appUnitFQDN + "/";
+                }
+            }).fail(function (res) {
+                homeAppUrl = "https://" + appUnitFQDN + "/" + appCellName + "/";
+            }).always(setupApp);
+        }
 
         FontAwesomeConfig = {
             searchPseudoElements: true
